Bug 33266 - Writer crashes when bibliography database selected, when Base isn't installed
Summary: Writer crashes when bibliography database selected, when Base isn't installed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Björn Michaelsen
URL:
Whiteboard: target:3.6.0 target:3.5.2 target:5.0.0
Keywords:
: 33506 43207 46298 58564 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-18 21:19 UTC by shirahara
Modified: 2019-10-31 06:39 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description shirahara 2011-01-18 21:19:21 UTC
Steps to reproduce

- Install LO without Base
- Open Writer
- Select Tools -> Bibliography Database
- LO crash
Comment 1 Rene Engelhard 2011-01-25 18:13:49 UTC
*** Bug 33506 has been marked as a duplicate of this bug. ***
Comment 2 Kissaki 2011-02-12 04:34:58 UTC
Confirmed.
Experienced this as well.
Win7 x64.
Comment 3 Kissaki 2011-02-13 03:03:23 UTC
as it’s not only in RC, but also stable I changed the version up,
as it's not only x86 but also x64 I changed it to All,
as it’s a crash with potential data-loss I changed importance and severity up to max. After all, crashes are no-goes, top-prio.
Comment 4 Alex Thurgood 2011-02-28 01:19:23 UTC
Does this still happen in 3.3.1 final ?

Alex
Comment 5 Belzecue 2011-03-01 06:55:56 UTC
Yes, Alex. Still crashing in 3.3.1 final.
Comment 6 Alex Thurgood 2011-03-01 07:11:30 UTC
Hmm, I was just wondering whether you could delete the bibliography db entry via the Tools > Options > LibreOffice Base > Databases menu entry, and see whether that made any difference ?

As I don't have a Windows system on which to test, I don't know. On Mac, you don't get the choice of not installing one or more of the components, it is all or nothing. On Linux, the official debs install everything too. Someone with a Linux distribution package set would have to try to see if not installing the Base packet causes the same behaviour on Linux.

Failing that, I agree that the bibliography db should be deactivated or unregistered by the Windows installer if the user decides not to use Base (although to be fair, it doesn't take up a lot of space). Whether that is seen as vitally important to the development team is another matter. Data loss might, and I say might, only occur in the particular circumstances you have set out, and if the user has willingly decided not to install the Base module, why on earth would he or she go looking for the bibliograhphy db ?



Alex
Comment 7 Kissaki 2011-03-01 07:17:10 UTC
Yes, confirmed with 3.3.1 stable on a Win7 x64
Comment 8 Kissaki 2011-03-01 07:21:00 UTC
(In reply to comment #6)
> Hmm, I was just wondering whether you could delete the bibliography db entry
> via the Tools > Options > LibreOffice Base > Databases menu entry, and see
> whether that made any difference ?

After deleting, still crashes.
Comment 9 Kissaki 2011-03-01 07:27:31 UTC
(In reply to comment #6)
> and if the user has willingly decided not to install the Base module, why
> on earth would he or she go looking for the bibliograhphy db ?

I was not aware Base is used for the bibliography db, or rather, for using the references and index tables for my sources when writing a doc in writer.
When installing, I thought it was more of a DB backend if I want to use it as a DB for other data. More like scripting or coding something.
Comment 10 Alex Thurgood 2011-03-01 07:54:18 UTC
@kissaki :

Yes, unfortunately, the entry points for database functionality within the application suite is spread everywhere and not just in the Base module, but the Base module kind of pulls them altogether. Without it, the database things work rather unpredictably in my experience, or even not at all. If you want to use database functionality in LibreOffice, you have to install the Base module. However, I do agree that if you do not install the module, you should not be able to see the Bibliography database at all.


Alex
Comment 11 Kissaki 2011-03-01 07:59:09 UTC
The easiest way would be to make the Base package in the installer a dependency of the Writer and other packages using Base.
That way it is clear that Base is a dependency for the other packages,
and the crash-issue is solved as well for now, without much coding work on every place using Base.
Comment 12 Don't use this account, use tml@iki.fi 2011-03-07 04:51:24 UTC
I would prefer to just not make it possible any more to install just parts of the LibreOffice "modules". I.e. Writer, Calc, Impress, Draw, Base and Math (did I fotget any?) would always be installed. We have enough bugs elsewhere to fix, we don't want to have to debug weird border conditions in the installer that affect only a small part of the users. Sorry. See also bug #33798 .
Comment 13 Belzecue 2011-03-07 04:57:29 UTC
So you can't simply test for installation of Base on startup and if it's not installed then grey out the Bibliographic Database menu item? Are there additional points of entry to the db that are active in the interface and will crash if clicked when Base was not installed?  If the latter, I agree forcing Base install is reasonable.
Comment 14 Don't use this account, use tml@iki.fi 2011-03-07 05:06:26 UTC
I have no idea.
Comment 15 Alex Thurgood 2011-03-07 05:20:50 UTC
(In reply to comment #12)
> I would prefer to just not make it possible any more to install just parts of
> the LibreOffice "modules". I.e. Writer, Calc, Impress, Draw, Base and Math (did
> I fotget any?) would always be installed. We have enough bugs elsewhere to fix,
> we don't want to have to debug weird border conditions in the installer that
> affect only a small part of the users. Sorry. See also bug #33798 .

Yes, personally, I would agree with that too, but apparently, there is still a demand for the possibility of separate module installation...I remember when StarOffice was a single "unified" (I use that word lightly) app with a StarDesktop component :-))) 


Alex
Comment 16 Alex Thurgood 2011-03-07 05:22:12 UTC
(In reply to comment #13)
> installed then grey out the Bibliographic Database menu item? Are there
> additional points of entry to the db that are active in the interface and will
> crash if clicked when Base was not installed?  If the latter, I agree forcing
> Base install is reasonable.


How about Calc data ranges and the datapilot ? I seem to recall there's a hook to db functionality there too ?


Alex
Comment 17 Don't use this account, use tml@iki.fi 2011-03-07 05:23:56 UTC
But is that "demand" there only because "it has always been like that"? Sometimes we just have to take the risk that somebody is offended.
Comment 18 Alex Thurgood 2011-03-07 05:35:15 UTC
Hi Tor,

You're preaching to the converted as far as I'm concerned :-) The separation was introduced, if memory serves me correctly, after OOo was born, possibly around version 1.1.x, and after Sun had carried out a "survey". Obviously, that was nearly 10 years ago, and opinions and expectations may have changed since then.

Alex
Comment 19 shirahara 2011-03-07 06:20:57 UTC
(In reply to comment #18)
> Hi Tor,
> 
> You're preaching to the converted as far as I'm concerned :-) The separation
> was introduced, if memory serves me correctly, after OOo was born, possibly
> around version 1.1.x, and after Sun had carried out a "survey". Obviously, that
> was nearly 10 years ago, and opinions and expectations may have changed since
> then.
> 
> Alex

If correct, another survey must be carried out again to make it impossible to install modules separately. there's no other way than make a new convention in order to justify that.
Comment 20 Don't use this account, use tml@iki.fi 2011-03-07 07:23:49 UTC
OK, so feel free to use the ten year old software then, clearly we have been missing a survey for each and every functionality change / addition!

Sheesh.
Comment 21 shirahara 2011-03-07 07:47:49 UTC
(In reply to comment #20)
> OK, so feel free to use the ten year old software then, clearly we have been
> missing a survey for each and every functionality change / addition!
> 
> Sheesh.

If you do have a right to make it impossible any more to install just parts of
the LibreOffice modules, please go ahead.
Comment 22 Kissaki 2011-03-07 07:51:12 UTC
Personally, I like to be able to only install what I really want and need.
I can very well imagine ppl. only need writer,
or ppl not needing and wanting Math or Draw.

Modules should enforce installation of depended on modules, but just forcing everyone to install everything is too much IMO.
Why not keep the option? Other then with this Base issue (and other potential issues as Base is used as DB for things) there have not been others I presume?

So again, a module dependency when installing would be enough.
Comment 23 Don't use this account, use tml@iki.fi 2011-03-07 10:03:20 UTC
> I like to be able to only install what I really want and need.

But why draw the line at the somewhat random division into "modules" then? (Which, as this bug shows, leads to unexpected problems because of inter-dependencies.) 

If that possibility had not been there earlier, would you be asking for it? You don't ask "I never use the Drop Caps feature for paragraphs, why can't I leave that code uninstalled", do you?

I.e. you shouldn't assume that the current situation is "natural" and anything else is "unnatural".

> Modules should enforce installation of depended on modules,

So you prefer to risk having bugs like this as long as you can save some tens of megabytes of disk space? The most precious resource we have is developer time. I don't see anybody jumping up and offering to fix this bug... Why intentionally keep doing stuff in a way that causes problems and requires developer time to fix, instead of making stuff cleaner, simpler, and less error-prone?
Comment 24 Kissaki 2011-03-07 13:42:01 UTC
(In reply to comment #23)
> > I like to be able to only install what I really want and need.
> 
> But why draw the line at the somewhat random division into "modules" then?
> (Which, as this bug shows, leads to unexpected problems because of
> inter-dependencies.) 
> 
> If that possibility had not been there earlier, would you be asking for it? You
> don't ask "I never use the Drop Caps feature for paragraphs, why can't I leave
> that code uninstalled", do you?

Are you trolling?
You can’t seriously compare a software with it’s own executable and own focus and features to using or not a single feature of one of those apps.

> > Modules should enforce installation of depended on modules,
> 
> So you prefer to risk having bugs like this as long as you can save some tens
> of megabytes of disk space? The most precious resource we have is developer
> time. I don't see anybody jumping up and offering to fix this bug... Why
> intentionally keep doing stuff in a way that causes problems and requires
> developer time to fix, instead of making stuff cleaner, simpler, and less
> error-prone?

As I pointed out my point is that when there were no problems in the other areas before and are not now, why merge them? One could as easily just keep it the way it is.
Where dependencies come in (writer -> base) you’ll make them dependent on installation as well.

I get your point, but you should be able to get mine as well.
Comment 25 Belzecue 2011-03-07 15:29:09 UTC
Whenever I install for my own use, I always do a custom install and only install Writer and Calc. I never use the others.  So enforcing install of all components would be a waste of disk space in my case.  I've no idea if I'm typical or not.  We'd need a survey to find out ;-)
Comment 26 Don't use this account, use tml@iki.fi 2011-03-07 22:48:26 UTC
Yes, I can.
Comment 27 Alex Thurgood 2011-03-30 05:59:55 UTC
Lowering importance and priority, I don't seriously think anything is going to happen to this any time soon, unless someone steps up to the mark.


Alex
Comment 28 Don't use this account, use tml@iki.fi 2011-03-30 06:17:26 UTC
Ah, this flame war, thanks for reminding, I have a reply to comment #24 to add:

> You can’t seriously compare a software with it’s own executable and own focus

Ha ha. Note that the "own executable" for Base is just a minimal wrapper that starts the very same soffice.bin executable that handles *all* LibreOffice aspects: Writer, Calc, Base, etc. In fact I don't even know why we bother to ship a separate Base "executable" (sbase.exe) on Windows. As far as I understand, we could instead just have the Start Menu entry for Base run soffice.exe with the appropriate command-line option to make it start as Base, or have an already running soffice.bin open up a new empty Base document, or something.

(On Unixes, it is a bit different, there people might be used to start Base by entering an explicit oobase or sbase command.)
Comment 29 Carlos 2011-04-08 02:36:28 UTC
Folks, this problem happens to me too.
I just wanted to say that obviously I disagree with the idea of forcing the install of Base just to avoid this kind of bugs with Writer/Calc.

Like most people, I prefer customs installations.
Comment 30 Don't use this account, use tml@iki.fi 2011-04-08 02:47:25 UTC
Like "most" people, eh? Do you have some reliable proof for that? I think it is overwhelmingly clear that too many options just confuse real end-users. Geeks and "freedom-lovers" are not "most people".
Comment 31 Don't use this account, use tml@iki.fi 2011-04-08 02:48:08 UTC
(But of course, I don't have any proof either. I don't care that much personally, I just work here. I do whatever my boss(es) tell me to do.)
Comment 32 AndersM 2011-11-23 01:38:41 UTC
Same problem LO 3.4.4. The program just closes. Threre should at least be a information dialog and no closing. A bit sad that nothing has happend in 10 month on this.
Comment 33 Björn Michaelsen 2011-12-23 11:46:57 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 34 Björn Michaelsen 2012-02-28 17:01:31 UTC
new->confirmed by downstream bugs
Comment 35 Björn Michaelsen 2012-02-28 17:02:18 UTC
*** Bug 46298 has been marked as a duplicate of this bug. ***
Comment 36 Björn Michaelsen 2012-02-28 17:02:37 UTC
*** Bug 43207 has been marked as a duplicate of this bug. ***
Comment 37 Not Assigned 2012-03-06 09:19:01 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1889c1af41650576a29c587a0b2cdeaf0d297587

lp#527938, debian#602953, fdo#33266, i#105408: do not crash on clicking bibliography when base isnt installed
Comment 39 Not Assigned 2012-03-06 10:06:00 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=33ef1ffbd15994ec71be99d38c0d5171c63344a2&g=libreoffice-3-5

lp#527938, debian#602953, fdo#33266, i#105408: do not crash on clicking bibliography when base isnt installed


It will be available in LibreOffice 3.5.2.
Comment 40 Rainer Bielefeld Retired 2012-04-05 07:52:11 UTC
I added Fix submitter as assignee because this will ease queries and bug tracking.
Comment 41 Samuel Mehrbrodt 2013-01-09 20:12:34 UTC
*** Bug 54479 has been marked as a duplicate of this bug. ***
Comment 42 Rainer Bielefeld Retired 2013-01-10 05:30:07 UTC
Still [Reproducible] with parallel installation of  "LOdev  4.0.0.0.beta2   -  GERMAN UI / German Locale  [Build ID: 4104d660979c57e1160b5135634f732918460a0)]"  {tinderbox: @6, pull time 2012-12-20} on German WIN7 Home Premium (64bit) with subsequnetly removed Database modul and with separate /4 User Profile for Master Branch.

Further Results coming soon
Comment 43 grofaty 2013-04-01 07:49:02 UTC
I installed LibreOffice v4.0.1.2 on Windows XP and the crash still appears as described in bug report (first post). I am settings Status to: REOPENED.
Comment 44 grofaty 2013-04-01 07:51:02 UTC
Most probably the correct solution would be to grey out Bibliography Database if LibreOffice Base is not installed.
Comment 45 Rainer Bielefeld Retired 2013-04-01 08:24:16 UTC
@grofaty 
<https://wiki.documentfoundation.org/BugReport_Details#How_to_reopen_Bugs>!
What tests did you to to make sure that your current problem is not "Bug 62478 - CRASH when FILEOPEN Tools - Options - Base - Databases"?
Comment 46 grofaty 2013-04-05 06:12:20 UTC
@Rainer Bielefeld, retested on LibreOffice v4.0.2.2 on Windows XP on both bugs suggested.

First post from this 33266 bug is:
========================================
Steps to reproduce

- Install LO without Base
- Open Writer
- Select Tools -> Bibliography Database
- LO crash
========================================
Crashes with "Microsoft Visual C++ Runtime Library. Runtime Error! Program: C:\Program Files\LibreOffice 4.0\program\soffice.bin abnormal program termination".

I have tested this on two computers. In one crashes with above error and on another computer works fine. The difference is that LibreOffice crash computer there is no LibreOffice Base installed. So my suggestion is to gray out the Tools | Bibliography Database if LibreOffice Base is not installed.


First post from bug report 62478 bug is:
========================================
1. Launch LibO
2. From LibO Start Center: Menu 'Tools -> Options -> Expand LibreOfficeDev Base'
3. Click 'Databases'
   > Crash
========================================
Tested on LibreOffice 4.0.2.2 on Windows XP on two computers. Crash does not appear in my case.

So in my humble opinion I have commented on correct bug.
Comment 47 Rainer Bielefeld Retired 2013-04-05 14:05:40 UTC
NOT reproducible with reduced user installation (without Base) of "LibO  4.0.2.2 rc   -  German UI / German Locale  [Build ID: 4c82dcdd6efcd48b1d8bba66bfe1989deee49c3)]"  {tinderbox: @6, pull time  2013-03-26 12:00(?)} on German WIN7 Home Premium (64bit) with newly created own user profile. 
As Expected
* When I launch LibO Database button is greyed out in LibO Start Center
* When I try to open an arbitrary.odb File type filter dialog opens
* When I do menu 'Tools -> Options -> LibO Base Database' no crash

@grofaty:
I agree, your problem obviously is not Bug 62478 (does not match with date of appearance and observation in other 4.0.2.2 installations).
But I doubt that your problem has to do with Bug 33266. Same symptoms, but probably different roots. If the problem persists after usual repair attempts please report a new bug with very precise information concerning your installation.

Closing this one again.
Comment 48 Jean-Baptiste Faure 2014-01-26 15:34:28 UTC
*** Bug 58564 has been marked as a duplicate of this bug. ***
Comment 49 Commit Notification 2015-05-19 12:01:12 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=76c61ced4eaa5f69b948dca7537028eaa88225b3

check for and handle missing base in mail merge (related: fdo#33266)

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 50 stragu 2019-10-30 07:10:58 UTC
I just reproduced this in the following:

Version: 6.3.2.2
Build ID: 1:6.3.2-0ubuntu0.18.04.1~lo1
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

On Ubuntu 18.04.2 64-bit.

Didn't have Base installed, it crashed every time I tried opening the Bibliography Database. Installing libreoffice-base fixed it.

Anyone else can reproduce? Is this a regression and should I open a new bug?