check for and handle missing base in mail merge (related: fdo#33266)

Change-Id: I3e362a873c28026cbecf005c07def1295aa920e0