svtools/source/dialogs/restartdialog.cxx
@@ -40,6 +40,9 @@ public:
         case svtools::RESTART_REASON_BIBLIOGRAPHY_INSTALL:
             get(reason_, "reason_bibliography_install");
             break;
+        case svtools::RESTART_REASON_MAILMERGE_INSTALL:
+            get(reason_, "reason_mailmerge_install");
+            break;
         default:
             assert(false); // this cannot happen
         }
